internal-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-lb 
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: store-front
